--- a/UsersService.Infrastructure/UsersService.Infrastructure.csproj
+++ b/UsersService.Infrastructure/UsersService.Infrastructure.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\UsersService.Application\UsersService.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Presistance\Migrations\" />
+    </ItemGroup>
+
 </Project>
