--- a/UsersService.Presentation/UsersService.Presentation.csproj
+++ b/UsersService.Presentation/UsersService.Presentation.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\UsersService.Application\UsersService.Application.csproj" />
+      <ProjectReference Include="..\UsersService.Infrastructure\UsersService.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
