--- a/UsersService.Presentation/appsettings.json
+++ b/UsersService.Presentation/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection":
+    "Host=localhost;Port=5432;Database=animeaura;Username=oleh;Password=1234"
+  },
+  "JwtSettings": {
+    "SecretKey": "12345678901234567890secret32key1"}
 }
