--- a/UsersService.Application/UsersService.Application.csproj
+++ b/UsersService.Application/UsersService.Application.csproj
@@ -15,4 +15,9 @@
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="DTOs\" />
+      <Folder Include="Profiles\AppServices\" />
+    </ItemGroup>
+
 </Project>
