--- a/UsersService.Infrastructure/UsersService.Infrastructure.csproj
+++ b/UsersService.Infrastructure/UsersService.Infrastructure.csproj
@@ -14,4 +14,8 @@
       <Folder Include="Presistance\Migrations\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+    </ItemGroup>
+
 </Project>
