Config and Add ObjectStorage - Cloudinary

--- a/UsersService.Presentation/appsettings.json
+++ b/UsersService.Presentation/appsettings.json
@@ -9,8 +9,15 @@
 
   "ConnectionStrings": {
     "DefaultConnection":
-    "Host=localhost;Port=5432;Database=animeaura;Username=oleh;Password=1234"
+    "Host=localhost;Port=5432;Database=quiz_users;Username=oleh;Password=1234"
   },
   "JwtSettings": {
-    "SecretKey": "12345678901234567890secret32key1"}
+    "SecretKey": "12345678901234567890secret32key1"},
+  "Cloudinary": {
+    "CloudName": "diehfrdni",
+    "ApiKey": "378591941396668",
+    "ApiSecret": "-Aeq0V8vrMZBN6xC7J0zZCaw1uY",
+    "Folder": "quiz-arena/avatars",
+    "MaxBytes": 5242880
+  }
 }
