--- a/UsersService.Infrastructure/UsersService.Infrastructure.csproj
+++ b/UsersService.Infrastructure/UsersService.Infrastructure.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="CloudinaryDotNet" Version="1.27.7" />
       <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
     </ItemGroup>
 
